add brand logo to right, change title in tab popup etc.

--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Title and Icon -->
 
-        <title id="title">Private Video Call System, Free Video Calls, Messaging and Screen Sharing</title>
+        <title id="title">Private Video Call System - SFU</title>
         <link id="icon" rel="shortcut icon" href="../images/logo.svg" />
         <link id="appleTouchIcon" rel="apple-touch-icon" href="../images/logo.svg" />
 
@@ -87,7 +87,7 @@
                     <div class="container">
                         <div class="hero-inner">
                             <div class="hero-copy">
-                                <img class="hero-branding-image" src="../images/PrivSecure-Branding.png" alt="PrivSecure Branding" />
+                                <!-- <img class="hero-branding-image" src="../images/PrivSecure-Branding.png" alt="PrivSecure Branding" /> -->
                                 <h1 id="appTitle" class="hero-title mt-0">
                                     Private Video Call System<br />[TEST/ALPHA RELEASE]<br />
                                 </h1>
@@ -101,11 +101,14 @@
                                 Privtate authorised access only - not for public use.
                                 </p>
                             </div>
+                            <div class="hero-figure">
+                                <img src="../images/PrivSecure-Branding.png" alt="PrivSecure Branding" class="hero-image" />
+                            </div>
                             <!-- <div class="hero-figure anime-element"> -->
                             <!--     <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396"> -->
                             <!--         <rect width="528" height="396" style="fill: transparent" /> -->
                             <!--     </svg> -->
-                            <!--     <div class="hero-figure-box hero-figure-box-01" data-rotation="45deg"></div> -->
+                                <!-- <div class="hero-figure-box hero-figure-box-01" data-rotation="45deg"></div> -->
                             <!--     <div class="hero-figure-box hero-figure-box-02" data-rotation="-45deg"></div> -->
                             <!--     <div class="hero-figure-box hero-figure-box-03" data-rotation="0deg"></div> -->
                             <!--     <div class="hero-figure-box hero-figure-box-04" data-rotation="-135deg"></div> -->
