--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1163,6 +1163,9 @@ label {
 .hero-copy {
     position: relative;
     z-index: 1;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
 .hero-cta {
     margin-bottom: 40px;
@@ -1195,7 +1198,7 @@ label {
     left: -1.3%;
     width: 152.84%;
     height: 178.78%;
-    background-image: url('../images/hero-back-illustration.svg');
+    /* background-image: url('../images/hero-back-illustration.svg'); */
 }
 .hero-figure::after {
     top: -35.6%;
@@ -1203,6 +1206,7 @@ label {
     width: 57.2%;
     height: 87.88%;
     /* background-image: url('../images/hero-top-illustration.svg'); */
+    /* background-image: url('../images/PrivSecure-Branding.png'); */
 }
 .hero-figure-box {
     position: absolute;
@@ -1559,7 +1563,7 @@ label {
     top: -117px;
     width: 160px;
     height: 187px;
-    /* background-image: url('../images/cta-illustration.svg'); */
+    background-image: url('../images/cta-illustration.svg');
     background-repeat: no-repeat;
 }
 .cta-inner > * {
@@ -1586,7 +1590,12 @@ label {
     background: #242830;
 }
 .body-wrap {
-    background: #1d2026;
+    background-color: #1d2026;
+    /* background-image: url('../images/PrivSecure-Background.jpg'); */
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -2134,9 +2143,8 @@ main {
     letter-spacing: 0.5px;
 }
 
-.hero-branding-image {
-    float: left;
-    max-width: 30%;
-    height: auto;
-    margin: 0 32px 16px 0;
-}
+/* .hero-branding-image { */
+/*     max-width: 30%; */
+/*     height: auto; */
+/*     margin: 0 32px 16px 0; */
+/* } */
