--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -98,7 +98,7 @@
                                 <p id="appDescription" class="hero-paragraph">
                                 Browser-based Real-time Private Video Calls.
                                 Simple, Secure, Encrypted, Fast. No download, plug-in, or login is required.
-                                Privtate authorised access only - not for public use.
+                                Private authorised access only - not for public use.
                                 </p>
                             </div>
                             <div class="hero-figure">
