make ps logo clickable

--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -102,7 +102,9 @@
                                 </p>
                             </div>
                             <div class="hero-figure">
-                                <img src="../images/PrivSecure-Branding.png" alt="PrivSecure Branding" class="hero-image" />
+                                <a href="https://privsecure.com.au" target="_blank">
+                                    <img src="../images/PrivSecure-Branding.png" alt="PrivSecure Branding" class="hero-image" />
+                                </a>
                             </div>
                             <!-- <div class="hero-figure anime-element"> -->
                             <!--     <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396"> -->
