remove hero element to make image clickable

--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -101,11 +101,11 @@
                                 Private authorised access only - not for public use.
                                 </p>
                             </div>
-                            <div class="hero-figure">
+                            <!-- <div class="hero-figure"> -->
                                 <a href="https://privsecure.com.au" target="_blank">
                                     <img src="../images/PrivSecure-Branding.png" alt="PrivSecure Branding" class="hero-image" />
                                 </a>
-                            </div>
+                            <!-- </div> -->
                             <!-- <div class="hero-figure anime-element"> -->
                             <!--     <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396"> -->
                             <!--         <rect width="528" height="396" style="fill: transparent" /> -->
